--- a/frontend/src/resources/views/layouts/secondary.hbs
+++ b/frontend/src/resources/views/layouts/secondary.hbs
@@ -53,7 +53,8 @@
 
   </head>
   <body>
-      {{> header}}
+    {{> header}}
+    {{> sidebar}}
     <div class="container-fluid">
       {{{body}}}
     </div>
