--- a/frontend/src/resources/views/client/index.hbs
+++ b/frontend/src/resources/views/client/index.hbs
@@ -365,7 +365,7 @@
                         <div class='row'>
                             <div class='col-6 col-sm-4 col-md-4 col-lg-3 mt-3'>
                                 <a
-                                    href='https://ticketbox.vn/event/legend-concert-2023-86908?opm=tbox.home.hot.0'
+                                    href='/booking/ticketDetail'
                                     target='_blank'
                                     rel='noopener noreferrer'
                                     class='card-ticket-wrapper'
@@ -383,7 +383,7 @@
                             </div>
                             <div class='col-6 col-sm-4 col-md-4 col-lg-3 mt-3'>
                                 <a
-                                    href='https://ticketbox.vn/event/kich-idecaf-12-ba-mu-85611?opm=tbox.home.hot.1'
+                                    href='/booking/ticketDetail'
                                     target='_blank'
                                     rel='noopener noreferrer'
                                     class='card-ticket-wrapper'
@@ -437,7 +437,7 @@
                             </div>
                             <div class='col-6 col-sm-4 col-md-4 col-lg-3 mt-3'>
                                 <a
-                                    href='https://ticketbox.vn/event/legend-concert-2023-86908?opm=tbox.home.hot.0'
+                                    href='/booking/ticketDetail'
                                     target='_blank'
                                     rel='noopener noreferrer'
                                     class='card-ticket-wrapper'
@@ -455,7 +455,7 @@
                             </div>
                             <div class='col-6 col-sm-4 col-md-4 col-lg-3 mt-3'>
                                 <a
-                                    href='https://ticketbox.vn/event/kich-idecaf-12-ba-mu-85611?opm=tbox.home.hot.1'
+                                    href='/booking/ticketDetail'
                                     target='_blank'
                                     rel='noopener noreferrer'
                                     class='card-ticket-wrapper'
