--- a/frontend/src/resources/views/layouts/main.hbs
+++ b/frontend/src/resources/views/layouts/main.hbs
@@ -1,62 +1,81 @@
 <html>
-  <head>
-    <title>{{title}}</title>
+    <head>
+        <meta charset='utf-8' />
+        <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+        <meta name='format-detection' content='telephone=no' />
+        <meta name='author' content='ticketbox.vn' />
+        <meta name='viewport' content='width=device-width, initial-scale=1' />
+        <meta name='HandheldFriendly' content='True' />
+        <meta name='MobileOptimized' content='320' />
+        <!-- for Facebook -->
+        <meta property='fb:app_id' content='337594303053881' />
+        <!-- apple app -->
+        <meta name='apple-itunes-app' content='app-id=1041900498, app-argument=https://ticketbox.vn' />
 
+        <meta name='opm-id' content='tbox.edp' />
 
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    {{!-- <link rel='icon' href='https://www.safebooks.vn/upload/photo/fav-safebook-4164.png' sizes='192x192' /> --}}
-    {{!-- <link rel='apple-touch-icon' href='https://www.safebooks.vn/upload/photo/fav-safebook-4164.png' />
-    <meta name='msapplication-TileImage' content='https://www.safebooks.vn/upload/photo/fav-safebook-4164.png' /> --}}
-    {{! SEO }}
+        <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
+        <title>PEPSI presents RAVOLUTION MUSIC FESTIVAL - Chapter 9: UNITY | TicketBox | TicketBox.vn</title>
+        <link href='https://static.tkbcdn.com/images-v2/favicon.ico' rel='shortcut icon' type='image/x-icon' />
+        <meta
+            name='description'
+            content='20/05/2023 - Vinhomes Ocean Park 2. PEPSI presents RAVOLUTION MUSIC FESTIVAL • Date: 20.05.'
+        />
+        <meta name='keywords' content='Vé hòa nhạc, vé hội thảo, vé sự kiện, vé thể thao ở Việt Nam' />
+        <link rel='image_src' href='https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2023/04/05/E4EDFA.jpg' />
+        <meta name='HandheldFriendly' content='True' />
+        <meta name='MobileOptimized' content='320' />
+        <meta
+            name='viewport'
+            content='width=device-width, user-scalable=0, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1.0'
+        />
+        <meta property='al:ios:url' content='tbox://event/86971' />
+        <meta property='al:android:url' content='tbox://event/86971' />
+        <meta name='data-event-id' content='86971' />
+        <!-- for Facebook -->
+        <meta property='fb:app_id' content='337594303053881' />
+        <meta property='og:title' content='PEPSI presents RAVOLUTION MUSIC FESTIVAL - Chapter 9: UNITY' />
+        <meta property='og:type' content='product.item' />
+        <meta
+            property='og:image'
+            content='https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2023/04/05/E4EDFA.jpg'
+        />
+        <meta property='og:url' content='https://ticketbox.vn/event/ravolution-86971' />
+        <meta
+            property='og:description'
+            content='PEPSI presents RAVOLUTION MUSIC FESTIVAL
 
-    <!-- UTF-8 -->
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+• Date: 20.05.2023 
 
-    <!-- Title, Keywords, Description -->
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+• Location: Vinhomes Ocean Park 2 
 
-    <!-- Robots -->
-    <meta name="robots" content="index,follow">
-    {{!-- <link href="https://www.safebooks.vn/upload/photo/fav-safebook-4164.png" rel="shortcut icon" type="image/x-icon"> --}}
-    <meta name="geo.region" content="VN">
-    <meta name="geo.placename" content="Hồ Chí Minh">
-    <meta name="geo.position" content="10.823099;106.629664">
-    <meta name="ICBM" content="10.823099, 106.629664">
-    <meta name="revisit-after" content="1 days">
-    <meta name="author" content="ARITO SOLUTIONS JSC">
-    <meta name="copyright" content="ARITO SOLUTIONS JSC - [safebooks.vn@gmail.com]">
-    <meta property="og:type" content="article">
-    <meta property="og:site_name" content="ARITO SOLUTIONS JSC">
-    <meta property="og:title" content="Giới thiệu">
-    <meta property="og:description" content="">
-    {{!-- <meta property="og:url" content="https://www.safebooks.vn"> --}}
-    {{!-- <meta property="og:image" content="https://www.safebooks.vn/thumbs/xx2/upload/seopage/"> --}}
-    <meta property="og:image:alt" content="Giới thiệu">
-    <meta property="og:image:type" content="">
-    <meta property="og:image:width" content="">
-    <meta property="og:image:height" content="">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="safebooks.vn@gmail.com">
-    <meta name="twitter:creator" content="ARITO SOLUTIONS JSC">
-    {{!-- <meta property="og:url" content="https://www.safebooks.vn"> --}}
-    <meta property="og:title" content="Giới thiệu">
-    <meta property="og:description" content="">
-    {{!-- <meta property="og:image" content="https://www.safebooks.vn/thumbs/xx2/upload/seopage/"> --}}
-    {{!-- <link rel="canonical" href="https://www.safebooks.vn"> --}}
-    <meta name="format-detection" content="telephone=no">
+• Headliner Phase 1: R3HAB, VINI VICI, KAAZE, ANDREW RAYEL
 
-    <link as="style" href="//fonts.googleapis.com/css?family=Roboto%3Aregular%2C700%2Cregular%2C700%7CDancing+Script%3Aregular%2C400&amp;display=swap&amp;ver=3.9" id="flatsome-googlefonts-css" media="all" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    {{> style}}
+Ravolution Music Festival - Lễ hội Âm nhạc Điện tử hàng đầu Việt Nam thuộc hệ sinh thái Ravolution Asia,'
+        />
+        <meta name='apple-itunes-app' content='app-id=1041900498, app-argument=https://ticketbox.vn' />
+        {{> layouts/main/style}}
 
+    </head>
 
-  </head>
-  <body>
-      {{> header}}
-    <div class="container-fluid">
-      {{{body}}}
-    </div>
-    {{> script}}
-  </body>
+    <body id='page-top' data-spy='scroll' data-target='.navbar-fixed-top'>
+        {{> layouts/main/drawer}}
+
+        <section id='content' class='snap-content box-shadow'>
+            <div id='welcome-banner' style='display: none'>
+
+            </div>
+
+            <div class='relative'>
+                {{> layouts/main/header}}
+                {{{body}}}
+            </div>
+            {{> layouts/main/footer}}
+        </section>
+
+        {{> layouts/main/resetPassword}}
+
+        {{> components/modal/createEvent}}
+        {{> layouts/main/script}}
+    </body>
 </html>
