--- a/frontend/src/resources/views/layouts/secondary.hbs
+++ b/frontend/src/resources/views/layouts/secondary.hbs
@@ -48,16 +48,28 @@
 
     <link as="style" href="//fonts.googleapis.com/css?family=Roboto%3Aregular%2C700%2Cregular%2C700%7CDancing+Script%3Aregular%2C400&amp;display=swap&amp;ver=3.9" id="flatsome-googlefonts-css" media="all" onload="this.onload=null;this.rel='stylesheet'" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    {{> style}}
+   <link
+    href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css'
+    rel='stylesheet'
+    integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC'
+    crossorigin='anonymous'
+    />
+    {{> layouts/secondary/style}}
 
 
   </head>
   <body>
-    {{> header}}
-    {{> sidebar}}
+    {{> layouts/secondary/header}}
+    {{> layouts/secondary/sidebar}}
     <div class="container-fluid">
       {{{body}}}
     </div>
-    {{> script}}
+    <script
+      src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js'
+      integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM'
+      crossorigin='anonymous'
+    ></script>
+    <script src='https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js'></script>
+    {{> layouts/secondary/script}}
   </body>
 </html>
