--- a/frontend/src/resources/views/client/index.hbs
+++ b/frontend/src/resources/views/client/index.hbs
@@ -356,8 +356,8 @@
                         <div class='divider'>
 
                         </div>
-                        <img src='/img/heading-img-1-right.svg' alt='Heading Two' class='lzaKD' />
-                        <img src='/img/heading-img-1-mobile.svg' alt='Heading Mobile' class='dAFUHy' />
+                        <img class="ml-2" src='/img/heading-img-1-right.svg' alt='Heading Two' class='lzaKD' />
+                        {{!-- <img src='/img/heading-img-1-mobile.svg' alt='Heading Mobile' class='dAFUHy' /> --}}
                     </div>
                 </div>
                 <section class='jEmGwi'>
