--- a/frontend/src/resources/views/client/login.hbs
+++ b/frontend/src/resources/views/client/login.hbs
@@ -1,8 +1,9 @@
 <link rel="stylesheet" href="/css/login.css">
 
 <div class="page center">
-  <div class="form">
-    <img width="100%" src="https://lh3.googleusercontent.com/pw/AMWts8CXQtunYoMyDL8YSHCUP2wmwWcknGz9-OAlI_oZGu-nLRlNJQCQROAZysllDOf_-mXJl27wjWX9Pz4Wa8dz1hKVwS7JMwvp5cu7LTcB5T78odYcUIdIHmnCkVXTa93-eBCIhmHBj4TcFtQaUJOtJBU=w742-h236-s-no" alt=""> 
+  
+  <form class="form" method="POST">
+    <img width="50%" src="/img/EzTicket-logo.png" alt=""> 
     
 <!--     <h3>Đăng nhập</h3> -->
     
@@ -11,13 +12,21 @@
     
     <div class="term-box">
       <div class="check-box">
-        <input type="checkbox">
+        <input checked name="check" type="checkbox">
       </div>
       <p>Tôi đồng ý với <a target="_blank" href="#" rel="noopener noreferrer">Điều khoản sử dụng và mua vé</a> cho nguời có độ tuổi phù hợp</p>
+      
     </div>
+
+    
     
     <div class="form-option">
-      <button>
+      {{#if error}}
+        <div style="padding: 8px;" class="alert alert-danger">
+        {{error}}
+      </div>
+      {{/if}}
+      <button type="submit">
         Tiếp tục
       </button>
       
@@ -34,5 +43,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </form>
 </div>
