--- a/frontend/src/resources/views/partials/layouts/main/header.hbs
+++ b/frontend/src/resources/views/partials/layouts/main/header.hbs
@@ -6,7 +6,8 @@
             <a class='tkb-brand navbar-brand' href='/' data-opm='logo'>
                 <img
                     class='tkb-logo'
-                    src='https://static.tkbcdn.com/site/global/content-v2/img/ticketbox-logo-100.png?v1'
+                    {{!-- src='https://static.tkbcdn.com/site/global/content-v2/img/ticketbox-logo-100.png?v1' --}}
+                    src="/img/EzTicket-logo.png"
                 />
             </a>
 
