--- a/frontend/src/public/css/base.css
+++ b/frontend/src/public/css/base.css
@@ -25,7 +25,10 @@ body,
 html {
     width: 100%;
     height: 100%;
+    font-family: 'Open Sans', ProximaNova, sans-serif !important;
 }
+
+
 
 a {
     color: #1890ff;
