--- a/frontend/src/public/css/login.css
+++ b/frontend/src/public/css/login.css
@@ -1,3 +1,7 @@
+:root {
+  --main-color: #D864A9;
+}
+
 .center {
     display: flex;
     justify-content: center;
@@ -21,6 +25,8 @@
     margin: 24px auto auto;
     border: 1px solid rgb(230, 235, 245);         box-sizing: border-box;
     border-radius: 8px;
+    /* margin: auto; */
+    margin-top: 100px;
   }
   
   .form input {
@@ -33,7 +39,7 @@
       font-size: 14px;
       line-height: 20px;
       height: 44px;
-      width: 94%;
+      width: 100%;
       height: 44px;
       padding-left: 16px;
       margin-bottom: 10px;
@@ -42,10 +48,11 @@
   .form .term-box {
       position: relative;
       margin-top: 16px;
+      
       font-weight: normal;
       font-size: 12px;
       line-height: 16px;
-      text-align: justify;
+      text-align:left;
   }
   
   .term-box .check-box {
@@ -65,24 +72,24 @@
     width: 14px;
     height: 14px;
     top: -4px;
-    left: -6px;
+    left: -4px;
   }
   
   .term-box p {
     margin: 0px;
       top: 1px;
-      left: 30px;
+      left: 25px;
       position: absolute;
       font-weight: normal;
   }
   
   .term-box p a {
-    color: #D864A9;
+    color: var(--main-color);
     text-decoration: none;
   }
   
   .check-box > input:checked {
-    accent-color: #D864A9;
+    accent-color: var(--main-color);
   }
   
   .form-option {
@@ -101,6 +108,10 @@
     min-width: 88px;
     padding: 0px 24px;
     color: white;
+  }
+
+  .form-option button:hover {
+    background-color: var(--main-color);
   }
   
   .divide-line {
