--- a/frontend/src/resources/views/layouts/secondary.hbs
+++ b/frontend/src/resources/views/layouts/secondary.hbs
@@ -2,7 +2,7 @@
   <head>
     <title>{{title}}</title>
 
-
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     {{!-- <link rel='icon' href='https://www.safebooks.vn/upload/photo/fav-safebook-4164.png' sizes='192x192' /> --}}
     {{!-- <link rel='apple-touch-icon' href='https://www.safebooks.vn/upload/photo/fav-safebook-4164.png' />
@@ -64,6 +64,7 @@
     <div class="container-fluid">
       {{{body}}}
     </div>
+    
     <script
       src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js'
       integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM'
