--- a/frontend/src/resources/views/partials/layouts/main/header.hbs
+++ b/frontend/src/resources/views/partials/layouts/main/header.hbs
@@ -69,7 +69,7 @@
                 </div>
                 <div class='search-res smooth-trans relative hid' data-search-result='true' tabindex='2'></div>
             </div>
-            <a href="/login" class="user-info d-inline-block text-white">Đăng nhập / Đăng ký</a>
+            <a href="/login" class="user-info d-inline-block text-white">{{#if username}}{{username}}{{else}}Đăng nhập / Đăng ký{{/if}}</a>
            
             <a href="/my-ezt" class="btn btn-success btnAddEvent"><i class="ti-plus" style="font-size: 12px"></i> Tạo sự kiện</a>
             
